--- a/index.html
+++ b/index.html
@@ -3,89 +3,124 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Portfólio</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <body>
   <div class="container">
+
     <header class="cabecalho">
+
       <div class="perfil">
         <img src="https://github.com/AnaGodoi.png" alt="Profile Picture" class="perfil-foto" />
+
         <div class="titulo">
+
           <h1>Ana Carolina Godoi</h1>
           <h3>Designer gráfica e estudante de front-end.</h3>
-          <p>#ImersaoDev</p>
+          <p>#ImersaoDev #Alura</p>
+
+          <div class="icones">
+
+            <a href="https://www.instagram.com/godoii_ana/"><i class="fa-brands fa-instagram"></i></a>
+
+            <a href="https://www.linkedin.com/in/ana-carolina-godoi/"> <i class="fa-brands fa-linkedin"></i></a>
+
+            <a href="https://www.behance.net/godoimonf"><i class="fa-brands fa-square-behance"></i></a>
+
+            <a href="https://github.com/AnaGodoi"><i class="fa-brands fa-square-github"></i></a>
+
+          </div>
         </div>
       </div>
 
       <div class="tema">
         <button onclick="mudaTema()">Alterar Tema</button>
       </div>
+
     </header>
 
     <main class="projetos">
+
       <ul class="projetos-titulo">Projetos</ul>
 
       <li class="projetos-item">
-        <p>🔢 Calculadora de Média</p>
-        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="ZEoGzKJ" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-          <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/ZEoGzKJ">
-              Calculadora de média</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
-            on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <p>1. 🔢 Calculadora de Média</p>
+
+        <div class="codepen-container">
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="ZEoGzKJ" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/ZEoGzKJ">
+                Calculadora de média</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
       </li>
 
       <li class="projetos-item">
-        <p>💸 Conversor de Moeda</p>
-        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="QWrjwOY" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-          <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/QWrjwOY">
-              Conversor de Moeda</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
-            on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <p>2. 💸 Conversor de Moeda</p>
+
+        <div class="codepen-container">
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="QWrjwOY" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/QWrjwOY">
+                Conversor de Moeda</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
       </li>
 
       <li class="projetos-item">
-        <p>🔮 Mentalista</p>
-        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="BaxoEvO" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-          <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/BaxoEvO">
-              Mentalista - ID3</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
-            on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <p>3. 🔮 Mentalista</p>
+
+        <div class="codepen-container">
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="BaxoEvO" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/BaxoEvO">
+                Mentalista - ID3</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
       </li>
 
       <li class="projetos-item">
-        <p>🎞️ Alura Flix</p>
-        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="GRdZQRM" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-          <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/GRdZQRM">
-              Aluraflix - dia 5</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
-            on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <p>4. 🎞️ Alura Flix</p>
+        <div class="codepen-container">
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="GRdZQRM" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/GRdZQRM">
+                Aluraflix - dia 5</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
       </li>
 
       <li class="projetos-item">
-        <p>🏆 Tabela de Classificação</p>
-        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="JjvRQXb" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-          <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/JjvRQXb">
-              Tabela de classificação</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
-            on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <p>5. 🏆 Tabela de Classificação</p>
+
+        <div class="codepen-container">
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="JjvRQXb" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/JjvRQXb">
+                Tabela de classificação</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
       </li>
 
       <li class="projetos-item">
-        <p>🃏 Supertrunfo</p>
-        <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="zYjNRMb" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-          <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/zYjNRMb">
-              Super Trunfo - Dia 8</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
-            on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <p>6. 🃏 Supertrunfo</p>
+        <div class="codepen-container">
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="zYjNRMb" data-user="AnaGodoi" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/AnaGodoi/pen/zYjNRMb">
+                Super Trunfo - Dia 8</a> by Ana Godoi (<a href="https://codepen.io/AnaGodoi">@AnaGodoi</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
       </li>
 
     </main>
